# Messanger

./: LICENCE  alembic.ini  config.py  main.py  pyproject.toml
chat/: dao.py  models.py  router.py  schemas.py
dao/: base.py
database/: database.py
migration/: env.py
migration/versions/: 2025_02_06_1400-26ea95fc9f32_initial_revision.py  2025_02_06_1752-f8856da1eefd_.py  2025_02_06_1800-a08aa32e705a_asd.py
static/js/: auth.js  chat.js
static/styles/: auth.css  chat.css
templates/: auth.html  chat.html
users/: auth.py  dao.py  dependencies.py  dependensies.py  models.py  router.py  schemas.py
