[tool.poetry]
name = "messanger"
version = "0.1.0"
description = ""
authors = ["Zayniddin <126386572+tettle2806@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.37"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
