[tool.poetry]
name = "messanger"
version = "0.1.0"
description = ""
authors = ["Zayniddin <126386572+tettle2806@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.37"
pydantic = {extras = ["email"], version = "^2.10.6"}
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
uuid = "^1.30"
black = "^25.1.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
